assignments/PA3/cool.output
Terminals unused in grammar

    ERROR
    '!'
    FLAG


State 7 conflicts: 4 reduce/reduce
State 22 conflicts: 1 shift/reduce
State 64 conflicts: 1 shift/reduce
State 67 conflicts: 1 shift/reduce
State 68 conflicts: 1 shift/reduce
State 87 conflicts: 1 shift/reduce
State 95 conflicts: 1 shift/reduce
State 96 conflicts: 1 shift/reduce
State 97 conflicts: 1 shift/reduce
State 98 conflicts: 1 shift/reduce
State 99 conflicts: 1 shift/reduce
State 100 conflicts: 1 shift/reduce
State 101 conflicts: 1 shift/reduce
State 134 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class
    4           | error_msg

    5 class: CLASS TYPEID '{' dummy_feature_list '}' ';'
    6      | CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'
    7      | error_msg

    8 dummy_feature_list: ε
    9                   | dummy_feature_list feature

   10 formal_list: ε
   11            | formal
   12            | formal_list ',' formal
   13            | error_msg

   14 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   15        | OBJECTID ':' TYPEID optional_assign ';'
   16        | error_msg

   17 formal: OBJECTID ':' TYPEID

   18 expression_list1: ε
   19                 | expression
   20                 | expression_list1 ',' expression

   21 expression_list2: expression ';'
   22                 | expression_list2 expression ';'
   23                 | error ';'

   24 error_msg: ';'
   25          | ','

   26 expression: OBJECTID ASSIGN expression
   27           | expression '.' OBJECTID '(' expression_list1 ')'
   28           | expression '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   29           | OBJECTID '(' expression_list1 ')'
   30           | IF expression THEN expression ELSE expression FI
   31           | WHILE expression LOOP expression POOL
   32           | '{' expression_list2 '}'
   33           | LET let
   34           | CASE expression OF case_list ESAC
   35           | NEW TYPEID
   36           | ISVOID expression
   37           | expression '+' expression
   38           | expression '-' expression
   39           | expression '*' expression
   40           | expression '/' expression
   41           | '~' expression
   42           | expression '<' expression
   43           | expression LE expression
   44           | expression '=' expression
   45           | NOT expression
   46           | '(' expression ')'
   47           | OBJECTID
   48           | INT_CONST
   49           | STR_CONST
   50           | BOOL_CONST

   51 let: OBJECTID ':' TYPEID optional_assign IN expression
   52    | OBJECTID ':' TYPEID optional_assign ',' let
   53    | error_msg

   54 case_list: case
   55          | case_list case

   56 case: OBJECTID ':' TYPEID DARROW expression ';'

   57 optional_assign: ε
   58                | ASSIGN expression


Terminals, with rules where they appear

    $end (0) 0
    '!' (33)
    '(' (40) 14 27 28 29 46
    ')' (41) 14 27 28 29 46
    '*' (42) 39
    '+' (43) 37
    ',' (44) 12 20 25 52
    '-' (45) 38
    '.' (46) 27 28
    '/' (47) 40
    ':' (58) 14 15 17 51 52 56
    ';' (59) 5 6 14 15 21 22 23 24 56
    '<' (60) 42
    '=' (61) 44
    '@' (64) 28
    '{' (123) 5 6 14 32
    '}' (125) 5 6 14 32
    '~' (126) 41
    error (256) 23
    CLASS (258) 5 6
    ELSE (259) 30
    FI (260) 30
    IF (261) 30
    IN (262) 51
    INHERITS (263) 6
    LET (264) 33
    LOOP (265) 31
    POOL (266) 31
    THEN (267) 30
    WHILE (268) 31
    CASE (269) 34
    ESAC (270) 34
    OF (271) 34
    DARROW (272) 56
    NEW (273) 35
    ISVOID (274) 36
    STR_CONST <symbol> (275) 49
    INT_CONST <symbol> (276) 48
    BOOL_CONST <boolean> (277) 50
    TYPEID <symbol> (278) 5 6 14 15 17 28 35 51 52 56
    OBJECTID <symbol> (279) 14 15 17 26 27 28 29 47 51 52 56
    ASSIGN (280) 26 58
    NOT (281) 45
    LE (282) 43
    ERROR (283)
    FLAG (285)


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    program <program> (48)
        on left: 1
        on right: 0
    class_list <classes> (49)
        on left: 2 3 4
        on right: 1 3
    class <class_> (50)
        on left: 5 6 7
        on right: 2 3
    dummy_feature_list <features> (51)
        on left: 8 9
        on right: 5 6 9
    formal_list <formals> (52)
        on left: 10 11 12 13
        on right: 12 14
    feature <feature> (53)
        on left: 14 15 16
        on right: 9
    formal <formal> (54)
        on left: 17
        on right: 11 12
    expression_list1 <expressions> (55)
        on left: 18 19 20
        on right: 20 27 28 29
    expression_list2 <expressions> (56)
        on left: 21 22 23
        on right: 22 32
    error_msg <error_msg> (57)
        on left: 24 25
        on right: 4 7 13 16 53
    expression <expression> (58)
        on left: 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
        on right: 14 19 20 21 22 26 27 28 30 31 34 36 37 38 39 40 41 42 43 44 45 46 51 56 58
    let <expression> (59)
        on left: 51 52 53
        on right: 33 52
    case_list <cases> (60)
        on left: 54 55
        on right: 34 55
    case <case_> (61)
        on left: 56
        on right: 54 55
    optional_assign <expression> (62)
        on left: 57 58
        on right: 15 51 52


State 0

    0 $accept: • program $end

    CLASS  shift, and go to state 1
    ';'    shift, and go to state 2
    ','    shift, and go to state 3

    program     go to state 4
    class_list  go to state 5
    class       go to state 6
    error_msg   go to state 7


State 1

    5 class: CLASS • TYPEID '{' dummy_feature_list '}' ';'
    6      | CLASS • TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'

    TYPEID  shift, and go to state 8


State 2

   24 error_msg: ';' •

    $default  reduce using rule 24 (error_msg)


State 3

   25 error_msg: ',' •

    $default  reduce using rule 25 (error_msg)


State 4

    0 $accept: program • $end

    $end  shift, and go to state 9


State 5

    1 program: class_list •
    3 class_list: class_list • class

    CLASS  shift, and go to state 1
    ';'    shift, and go to state 2
    ','    shift, and go to state 3

    $default  reduce using rule 1 (program)

    class      go to state 10
    error_msg  go to state 11


State 6

    2 class_list: class •

    $default  reduce using rule 2 (class_list)


State 7

    4 class_list: error_msg •
    7 class: error_msg •

    $end      reduce using rule 4 (class_list)
    $end      [reduce using rule 7 (class)]
    CLASS     reduce using rule 4 (class_list)
    CLASS     [reduce using rule 7 (class)]
    ';'       reduce using rule 4 (class_list)
    ';'       [reduce using rule 7 (class)]
    ','       reduce using rule 4 (class_list)
    ','       [reduce using rule 7 (class)]
    $default  reduce using rule 4 (class_list)


State 8

    5 class: CLASS TYPEID • '{' dummy_feature_list '}' ';'
    6      | CLASS TYPEID • INHERITS TYPEID '{' dummy_feature_list '}' ';'

    INHERITS  shift, and go to state 12
    '{'       shift, and go to state 13


State 9

    0 $accept: program $end •

    $default  accept


State 10

    3 class_list: class_list class •

    $default  reduce using rule 3 (class_list)


State 11

    7 class: error_msg •

    $default  reduce using rule 7 (class)


State 12

    6 class: CLASS TYPEID INHERITS • TYPEID '{' dummy_feature_list '}' ';'

    TYPEID  shift, and go to state 14


State 13

    5 class: CLASS TYPEID '{' • dummy_feature_list '}' ';'

    $default  reduce using rule 8 (dummy_feature_list)

    dummy_feature_list  go to state 15


State 14

    6 class: CLASS TYPEID INHERITS TYPEID • '{' dummy_feature_list '}' ';'

    '{'  shift, and go to state 16


State 15

    5 class: CLASS TYPEID '{' dummy_feature_list • '}' ';'
    9 dummy_feature_list: dummy_feature_list • feature

    OBJECTID  shift, and go to state 17
    '}'       shift, and go to state 18
    ';'       shift, and go to state 2
    ','       shift, and go to state 3

    feature    go to state 19
    error_msg  go to state 20


State 16

    6 class: CLASS TYPEID INHERITS TYPEID '{' • dummy_feature_list '}' ';'

    $default  reduce using rule 8 (dummy_feature_list)

    dummy_feature_list  go to state 21


State 17

   14 feature: OBJECTID • '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   15        | OBJECTID • ':' TYPEID optional_assign ';'

    '('  shift, and go to state 22
    ':'  shift, and go to state 23


State 18

    5 class: CLASS TYPEID '{' dummy_feature_list '}' • ';'

    ';'  shift, and go to state 24


State 19

    9 dummy_feature_list: dummy_feature_list feature •

    $default  reduce using rule 9 (dummy_feature_list)


State 20

   16 feature: error_msg •

    $default  reduce using rule 16 (feature)


State 21

    6 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list • '}' ';'
    9 dummy_feature_list: dummy_feature_list • feature

    OBJECTID  shift, and go to state 17
    '}'       shift, and go to state 25
    ';'       shift, and go to state 2
    ','       shift, and go to state 3

    feature    go to state 19
    error_msg  go to state 20


State 22

   14 feature: OBJECTID '(' • formal_list ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift, and go to state 26
    ';'       shift, and go to state 2
    ','       shift, and go to state 3

    ','       [reduce using rule 10 (formal_list)]
    $default  reduce using rule 10 (formal_list)

    formal_list  go to state 27
    formal       go to state 28
    error_msg    go to state 29


State 23

   15 feature: OBJECTID ':' • TYPEID optional_assign ';'

    TYPEID  shift, and go to state 30


State 24

    5 class: CLASS TYPEID '{' dummy_feature_list '}' ';' •

    $default  reduce using rule 5 (class)


State 25

    6 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' • ';'

    ';'  shift, and go to state 31


State 26

   17 formal: OBJECTID • ':' TYPEID

    ':'  shift, and go to state 32


State 27

   12 formal_list: formal_list • ',' formal
   14 feature: OBJECTID '(' formal_list • ')' ':' TYPEID '{' expression '}' ';'

    ','  shift, and go to state 33
    ')'  shift, and go to state 34


State 28

   11 formal_list: formal •

    $default  reduce using rule 11 (formal_list)


State 29

   13 formal_list: error_msg •

    $default  reduce using rule 13 (formal_list)


State 30

   15 feature: OBJECTID ':' TYPEID • optional_assign ';'

    ASSIGN  shift, and go to state 35

    $default  reduce using rule 57 (optional_assign)

    optional_assign  go to state 36


State 31

    6 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';' •

    $default  reduce using rule 6 (class)


State 32

   17 formal: OBJECTID ':' • TYPEID

    TYPEID  shift, and go to state 37


State 33

   12 formal_list: formal_list ',' • formal

    OBJECTID  shift, and go to state 26

    formal  go to state 38


State 34

   14 feature: OBJECTID '(' formal_list ')' • ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 39


State 35

   58 optional_assign: ASSIGN • expression

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 54


State 36

   15 feature: OBJECTID ':' TYPEID optional_assign • ';'

    ';'  shift, and go to state 55


State 37

   17 formal: OBJECTID ':' TYPEID •

    $default  reduce using rule 17 (formal)


State 38

   12 formal_list: formal_list ',' formal •

    $default  reduce using rule 12 (formal_list)


State 39

   14 feature: OBJECTID '(' formal_list ')' ':' • TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 56


State 40

   30 expression: IF • expression THEN expression ELSE expression FI

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 57


State 41

   33 expression: LET • let

    OBJECTID  shift, and go to state 58
    ';'       shift, and go to state 2
    ','       shift, and go to state 3

    error_msg  go to state 59
    let        go to state 60


State 42

   31 expression: WHILE • expression LOOP expression POOL

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 61


State 43

   34 expression: CASE • expression OF case_list ESAC

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 62


State 44

   35 expression: NEW • TYPEID

    TYPEID  shift, and go to state 63


State 45

   36 expression: ISVOID • expression

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 64


State 46

   49 expression: STR_CONST •

    $default  reduce using rule 49 (expression)


State 47

   48 expression: INT_CONST •

    $default  reduce using rule 48 (expression)


State 48

   50 expression: BOOL_CONST •

    $default  reduce using rule 50 (expression)


State 49

   26 expression: OBJECTID • ASSIGN expression
   29           | OBJECTID • '(' expression_list1 ')'
   47           | OBJECTID •

    ASSIGN  shift, and go to state 65
    '('     shift, and go to state 66

    $default  reduce using rule 47 (expression)


State 50

   45 expression: NOT • expression

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 67


State 51

   41 expression: '~' • expression

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 68


State 52

   32 expression: '{' • expression_list2 '}'

    error       shift, and go to state 69
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression_list2  go to state 70
    expression        go to state 71


State 53

   46 expression: '(' • expression ')'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 72


State 54

   27 expression: expression • '.' OBJECTID '(' expression_list1 ')'
   28           | expression • '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   37           | expression • '+' expression
   38           | expression • '-' expression
   39           | expression • '*' expression
   40           | expression • '/' expression
   42           | expression • '<' expression
   43           | expression • LE expression
   44           | expression • '=' expression
   58 optional_assign: ASSIGN expression •

    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '.'  shift, and go to state 80
    '@'  shift, and go to state 81

    $default  reduce using rule 58 (optional_assign)


State 55

   15 feature: OBJECTID ':' TYPEID optional_assign ';' •

    $default  reduce using rule 15 (feature)


State 56

   14 feature: OBJECTID '(' formal_list ')' ':' TYPEID • '{' expression '}' ';'

    '{'  shift, and go to state 82


State 57

   27 expression: expression • '.' OBJECTID '(' expression_list1 ')'
   28           | expression • '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   30           | IF expression • THEN expression ELSE expression FI
   37           | expression • '+' expression
   38           | expression • '-' expression
   39           | expression • '*' expression
   40           | expression • '/' expression
   42           | expression • '<' expression
   43           | expression • LE expression
   44           | expression • '=' expression

    THEN  shift, and go to state 83
    LE    shift, and go to state 73
    '<'   shift, and go to state 74
    '='   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '*'   shift, and go to state 78
    '/'   shift, and go to state 79
    '.'   shift, and go to state 80
    '@'   shift, and go to state 81


State 58

   51 let: OBJECTID • ':' TYPEID optional_assign IN expression
   52    | OBJECTID • ':' TYPEID optional_assign ',' let

    ':'  shift, and go to state 84


State 59

   53 let: error_msg •

    $default  reduce using rule 53 (let)


State 60

   33 expression: LET let •

    $default  reduce using rule 33 (expression)


State 61

   27 expression: expression • '.' OBJECTID '(' expression_list1 ')'
   28           | expression • '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   31           | WHILE expression • LOOP expression POOL
   37           | expression • '+' expression
   38           | expression • '-' expression
   39           | expression • '*' expression
   40           | expression • '/' expression
   42           | expression • '<' expression
   43           | expression • LE expression
   44           | expression • '=' expression

    LOOP  shift, and go to state 85
    LE    shift, and go to state 73
    '<'   shift, and go to state 74
    '='   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '*'   shift, and go to state 78
    '/'   shift, and go to state 79
    '.'   shift, and go to state 80
    '@'   shift, and go to state 81


State 62

   27 expression: expression • '.' OBJECTID '(' expression_list1 ')'
   28           | expression • '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   34           | CASE expression • OF case_list ESAC
   37           | expression • '+' expression
   38           | expression • '-' expression
   39           | expression • '*' expression
   40           | expression • '/' expression
   42           | expression • '<' expression
   43           | expression • LE expression
   44           | expression • '=' expression

    OF   shift, and go to state 86
    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '.'  shift, and go to state 80
    '@'  shift, and go to state 81


State 63

   35 expression: NEW TYPEID •

    $default  reduce using rule 35 (expression)


State 64

   27 expression: expression • '.' OBJECTID '(' expression_list1 ')'
   28           | expression • '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   36           | ISVOID expression •
   37           | expression • '+' expression
   38           | expression • '-' expression
   39           | expression • '*' expression
   40           | expression • '/' expression
   42           | expression • '<' expression
   43           | expression • LE expression
   44           | expression • '=' expression

    '@'  shift, and go to state 81

    '@'       [reduce using rule 36 (expression)]
    $default  reduce using rule 36 (expression)


State 65

   26 expression: OBJECTID ASSIGN • expression

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 87


State 66

   29 expression: OBJECTID '(' • expression_list1 ')'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    $default  reduce using rule 18 (expression_list1)

    expression_list1  go to state 88
    expression        go to state 89


State 67

   27 expression: expression • '.' OBJECTID '(' expression_list1 ')'
   28           | expression • '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   37           | expression • '+' expression
   38           | expression • '-' expression
   39           | expression • '*' expression
   40           | expression • '/' expression
   42           | expression • '<' expression
   43           | expression • LE expression
   44           | expression • '=' expression
   45           | NOT expression •

    '@'  shift, and go to state 81

    '@'       [reduce using rule 45 (expression)]
    $default  reduce using rule 45 (expression)


State 68

   27 expression: expression • '.' OBJECTID '(' expression_list1 ')'
   28           | expression • '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   37           | expression • '+' expression
   38           | expression • '-' expression
   39           | expression • '*' expression
   40           | expression • '/' expression
   41           | '~' expression •
   42           | expression • '<' expression
   43           | expression • LE expression
   44           | expression • '=' expression

    '.'  shift, and go to state 80
    '@'  shift, and go to state 81

    '@'       [reduce using rule 41 (expression)]
    $default  reduce using rule 41 (expression)


State 69

   23 expression_list2: error • ';'

    ';'  shift, and go to state 90


State 70

   22 expression_list2: expression_list2 • expression ';'
   32 expression: '{' expression_list2 • '}'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '}'         shift, and go to state 91
    '('         shift, and go to state 53

    expression  go to state 92


State 71

   21 expression_list2: expression • ';'
   27 expression: expression • '.' OBJECTID '(' expression_list1 ')'
   28           | expression • '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   37           | expression • '+' expression
   38           | expression • '-' expression
   39           | expression • '*' expression
   40           | expression • '/' expression
   42           | expression • '<' expression
   43           | expression • LE expression
   44           | expression • '=' expression

    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '.'  shift, and go to state 80
    ';'  shift, and go to state 93
    '@'  shift, and go to state 81


State 72

   27 expression: expression • '.' OBJECTID '(' expression_list1 ')'
   28           | expression • '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   37           | expression • '+' expression
   38           | expression • '-' expression
   39           | expression • '*' expression
   40           | expression • '/' expression
   42           | expression • '<' expression
   43           | expression • LE expression
   44           | expression • '=' expression
   46           | '(' expression • ')'

    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '.'  shift, and go to state 80
    ')'  shift, and go to state 94
    '@'  shift, and go to state 81


State 73

   43 expression: expression LE • expression

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 95


State 74

   42 expression: expression '<' • expression

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 96


State 75

   44 expression: expression '=' • expression

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 97


State 76

   37 expression: expression '+' • expression

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 98


State 77

   38 expression: expression '-' • expression

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 99


State 78

   39 expression: expression '*' • expression

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 100


State 79

   40 expression: expression '/' • expression

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 101


State 80

   27 expression: expression '.' • OBJECTID '(' expression_list1 ')'

    OBJECTID  shift, and go to state 102


State 81

   28 expression: expression '@' • TYPEID '.' OBJECTID '(' expression_list1 ')'

    TYPEID  shift, and go to state 103


State 82

   14 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' • expression '}' ';'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 104


State 83

   30 expression: IF expression THEN • expression ELSE expression FI

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 105


State 84

   51 let: OBJECTID ':' • TYPEID optional_assign IN expression
   52    | OBJECTID ':' • TYPEID optional_assign ',' let

    TYPEID  shift, and go to state 106


State 85

   31 expression: WHILE expression LOOP • expression POOL

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 107


State 86

   34 expression: CASE expression OF • case_list ESAC

    OBJECTID  shift, and go to state 108

    case_list  go to state 109
    case       go to state 110


State 87

   26 expression: OBJECTID ASSIGN expression •
   27           | expression • '.' OBJECTID '(' expression_list1 ')'
   28           | expression • '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   37           | expression • '+' expression
   38           | expression • '-' expression
   39           | expression • '*' expression
   40           | expression • '/' expression
   42           | expression • '<' expression
   43           | expression • LE expression
   44           | expression • '=' expression

    '@'  shift, and go to state 81

    '@'       [reduce using rule 26 (expression)]
    $default  reduce using rule 26 (expression)


State 88

   20 expression_list1: expression_list1 • ',' expression
   29 expression: OBJECTID '(' expression_list1 • ')'

    ','  shift, and go to state 111
    ')'  shift, and go to state 112


State 89
